add to spelling checker list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,42 @@
   "spellchecker.ignoreWordsList": [
     "Jinja",
     "templating",
-    "SMEs"
+    "SMEs",
+    "DSL",
+    "DSLs",
+    "Starburst",
+    "Starburst's",
+    "markus",
+    "voelter",
+    "Voelter",
+    "google",
+    "APIs",
+    "config",
+    "dbt",
+    "Dbt",
+    "dbt's",
+    "Dbt's",
+    "workflows",
+    "workflow",
+    "metadata",
+    "transformative",
+    "clario",
+    "Clario",
+    "versioning",
+    "TODO",
+    "TODO:",
+    "configurability"
   ],
   "cSpell.words": [
-    "templating"
+    "templating",
+    "Starburst",
+    "Starburst's",
+    "markus",
+    "voelter",
+    "google",
+    "dbt",
+    "dbt's",
+    "TODO",
+    "TODO:",
   ]
 }
