typos and todos fixed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,8 @@
     "versioning",
     "TODO",
     "TODO:",
-    "configurability"
+    "configurability",
+    "LIonWeb"
   ],
   "cSpell.words": [
     "templating",
