--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,7 +27,8 @@
     "TODO",
     "TODO:",
     "configurability",
-    "LIonWeb"
+    "LIonWeb",
+    "sociotechnical"
   ],
   "cSpell.words": [
     "templating",
